test: record spring cloud alibaba acceptance